--- a/index.html
+++ b/index.html
@@ -1,18 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprendiendo CSS</title>
     <link rel="stylesheet" href="estilos.css">
-    
+
 </head>
+
 <body>
 
-    <div></div>
-    <div></div>
-    <div></div>
+    <div>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis molestias et eaque in, commodi fugit
+            debitis voluptas sapiente iusto quo magni repudiandae? Itaque commodi explicabo, nesciunt minima praesentium
+            suscipit harum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi sed nostrum recusandae
+            deleniti repellendus, rem praesentium, perferendis, voluptate molestias corrupti aperiam eaque incidunt aut
+            porro velit nemo amet dolorum inventore!Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus reprehenderit sint ab quas quia omnis
+            nemo nisi fugit repellendus impedit vero quidem ut ipsum delectus aut, minima veritatis natus ipsa!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto vel rerum nam necessitatibus saepe. Enim,
+            nihil. Quibusdam, deleniti necessitatibus omnis provident et eligendi inventore commodi at deserunt quia sit
+            repudiandae.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat vel nulla earum incidunt architecto quae
+            esse cum sit magni error quasi dolor, ea tenetur nobis dolorum cumque, quisquam inventore dolorem.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur modi error nisi quisquam
+            exercitationem, vero quos nihil suscipit maiores, voluptate rem? Laborum vitae sed officiis quos quaerat
+            repellendus, quae incidunt!
+        </p>
+    </div>
+
+    <div>
+        <img src="https://i.pinimg.com/236x/a7/62/96/a76296fd00b869fd6a513f38bdaec2f1.jpg">
+    </div>
 
 </body>
+
 </html>
