--- a/index.html
+++ b/index.html
@@ -12,26 +12,16 @@
 
 <body>
 
-    <div>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis molestias et eaque in, commodi fugit
-            debitis voluptas sapiente iusto quo magni repudiandae? Itaque commodi explicabo, nesciunt minima praesentium
-            suscipit harum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi sed nostrum recusandae
-            deleniti repellendus, rem praesentium, perferendis, voluptate molestias corrupti aperiam eaque incidunt aut
-            porro velit nemo amet dolorum inventore!Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus reprehenderit sint ab quas quia omnis
-            nemo nisi fugit repellendus impedit vero quidem ut ipsum delectus aut, minima veritatis natus ipsa!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto vel rerum nam necessitatibus saepe. Enim,
-            nihil. Quibusdam, deleniti necessitatibus omnis provident et eligendi inventore commodi at deserunt quia sit
-            repudiandae.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat vel nulla earum incidunt architecto quae
-            esse cum sit magni error quasi dolor, ea tenetur nobis dolorum cumque, quisquam inventore dolorem.
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur modi error nisi quisquam
-            exercitationem, vero quos nihil suscipit maiores, voluptate rem? Laborum vitae sed officiis quos quaerat
-            repellendus, quae incidunt!
-        </p>
-    </div>
 
-    <div>
+
+    <div class='cont'>
         <img src="https://i.pinimg.com/236x/a7/62/96/a76296fd00b869fd6a513f38bdaec2f1.jpg">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto tempora eum facilis fugit reiciendis
+        perspiciatis nihil necessitatibus culpa reprehenderit, facere ea ipsum amet provident, explicabo commodi
+        illo quisquam sequi eligendi?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero fugit aut dolor
+        eveniet consectetur. Molestias fuga quisquam impedit repudiandae in, officiis provident veritatis pariatur
+        necessitatibus, est dignissimos vero nisi natus.
+
     </div>
 
 </body>
