--- a/index.html
+++ b/index.html
@@ -12,17 +12,25 @@
 
 <body>
 
-
-
-    <div class='cont'>
-        <img src="https://i.pinimg.com/236x/a7/62/96/a76296fd00b869fd6a513f38bdaec2f1.jpg">
+    <div class='texto'>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto tempora eum facilis fugit reiciendis
         perspiciatis nihil necessitatibus culpa reprehenderit, facere ea ipsum amet provident, explicabo commodi
         illo quisquam sequi eligendi?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero fugit aut dolor
         eveniet consectetur. Molestias fuga quisquam impedit repudiandae in, officiis provident veritatis pariatur
         necessitatibus, est dignissimos vero nisi natus.
-
     </div>
+
+    <div class='texto2'>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto tempora eum facilis fugit reiciendis
+        perspiciatis nihil necessitatibus culpa reprehenderit, facere ea ipsum amet provident, explicabo commodi
+        illo quisquam sequi eligendi?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero fugit aut dolor
+        eveniet consectetur. Molestias fuga quisquam impedit repudiandae in, officiis provident veritatis pariatur
+        necessitatibus, est dignissimos vero nisi natus.
+    </div>
+
+    <form><input type="text" placeholder="Ingrese su nombre aquí: "></form>
+
+    <b> a </b>
 
 </body>
 
