--- a/index.html
+++ b/index.html
@@ -9,29 +9,26 @@
     <link rel="stylesheet" href="estilos.css">
 
 </head>
-
 <body>
 
-    <div class='texto'>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto tempora eum facilis fugit reiciendis
-        perspiciatis nihil necessitatibus culpa reprehenderit, facere ea ipsum amet provident, explicabo commodi
-        illo quisquam sequi eligendi?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero fugit aut dolor
-        eveniet consectetur. Molestias fuga quisquam impedit repudiandae in, officiis provident veritatis pariatur
-        necessitatibus, est dignissimos vero nisi natus.
+    <div class='caja1'>
+        div de prueba
     </div>
 
-    <div class='texto2'>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto tempora eum facilis fugit reiciendis
-        perspiciatis nihil necessitatibus culpa reprehenderit, facere ea ipsum amet provident, explicabo commodi
-        illo quisquam sequi eligendi?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero fugit aut dolor
-        eveniet consectetur. Molestias fuga quisquam impedit repudiandae in, officiis provident veritatis pariatur
-        necessitatibus, est dignissimos vero nisi natus.
-    </div>
+    <a class='caja2' href="https://ytodotendencias.com" target="_BLANK"> div de prueba</a>
 
-    <form><input type="text" placeholder="Ingrese su nombre aquí: "></form>
+    <a class='caja3' href="https://twitter.com" target="_BLANK"> div de prueba</a> <br>
+    <a class='caja3' href="https://alibaba.com" target="_BLANK"> div de prueba</a> <br>
+    <a class='caja3' href="https://spotify.com" target="_BLANK"> div de prueba</a> <br>
+    <a class='caja3' href="https://seriesboyslove.com" target="_BLANK"> div de prueba</a> 
 
-    <b> a </b>
+    <div class='caja4'> </div> 
+    <input class='caja5'>
 
+    <div class='caja6'> 
+        <b lang="en"> hello how are you</b>
+        <b> hola como estás</b>
+    </div> 
+    
 </body>
-
 </html>
