--- a/index.html
+++ b/index.html
@@ -11,24 +11,21 @@
 </head>
 <body>
 
-    <div class='caja1'>
-        div de prueba
+    <div class='caja'>
+        <img src="https://www.nacionrex.com/__export/1652992060533/sites/debate/img/2022/05/19/jimin-se-sincera-sobre-grammys.png_2059494237.png">
     </div>
 
-    <a class='caja2' href="https://ytodotendencias.com" target="_BLANK"> div de prueba</a>
+    <div class='caja2'>
+        <img src="https://www.nacionrex.com/__export/1652992060533/sites/debate/img/2022/05/19/jimin-se-sincera-sobre-grammys.png_2059494237.png">
+    </div>
 
-    <a class='caja3' href="https://twitter.com" target="_BLANK"> div de prueba</a> <br>
-    <a class='caja3' href="https://alibaba.com" target="_BLANK"> div de prueba</a> <br>
-    <a class='caja3' href="https://spotify.com" target="_BLANK"> div de prueba</a> <br>
-    <a class='caja3' href="https://seriesboyslove.com" target="_BLANK"> div de prueba</a> 
+    <div class='caja3'>
+        <img src="https://www.nacionrex.com/__export/1652992060533/sites/debate/img/2022/05/19/jimin-se-sincera-sobre-grammys.png_2059494237.png">
+    </div>
 
-    <div class='caja4'> </div> 
-    <input class='caja5'>
-
-    <div class='caja6'> 
-        <b lang="en"> hello how are you</b>
-        <b> hola como estás</b>
-    </div> 
+    <div class='caja4'>
+        <img src="https://www.nacionrex.com/__export/1652992060533/sites/debate/img/2022/05/19/jimin-se-sincera-sobre-grammys.png_2059494237.png">
+    </div>
     
 </body>
 </html>
