--- a/index.html
+++ b/index.html
@@ -12,19 +12,11 @@
 <body>
 
     <div class='caja'>
-        <img src="https://www.nacionrex.com/__export/1652992060533/sites/debate/img/2022/05/19/jimin-se-sincera-sobre-grammys.png_2059494237.png">
+        <img src="https://qph.cf2.quoracdn.net/main-qimg-1b3bcbb8e562fff77c24cde255791dd8-lq">
     </div>
 
     <div class='caja2'>
-        <img src="https://www.nacionrex.com/__export/1652992060533/sites/debate/img/2022/05/19/jimin-se-sincera-sobre-grammys.png_2059494237.png">
-    </div>
-
-    <div class='caja3'>
-        <img src="https://www.nacionrex.com/__export/1652992060533/sites/debate/img/2022/05/19/jimin-se-sincera-sobre-grammys.png_2059494237.png">
-    </div>
-
-    <div class='caja4'>
-        <img src="https://www.nacionrex.com/__export/1652992060533/sites/debate/img/2022/05/19/jimin-se-sincera-sobre-grammys.png_2059494237.png">
+        <img src="https://qph.cf2.quoracdn.net/main-qimg-1b3bcbb8e562fff77c24cde255791dd8-lq">
     </div>
     
 </body>
