--- a/index.html
+++ b/index.html
@@ -11,13 +11,7 @@
 </head>
 <body>
 
-    <div class='caja'>
-        <img src="https://qph.cf2.quoracdn.net/main-qimg-1b3bcbb8e562fff77c24cde255791dd8-lq">
-    </div>
-
-    <div class='caja2'>
-        <img src="https://qph.cf2.quoracdn.net/main-qimg-1b3bcbb8e562fff77c24cde255791dd8-lq">
-    </div>
+    <div class='caja'></div>
     
 </body>
 </html>
