--- a/index.html
+++ b/index.html
@@ -9,11 +9,32 @@
     <link rel="stylesheet" href="estilos.css">
 
 </head>
+
 <body>
 
-    <div class='caja'></div>
-    <div class='caja2'></div>
-    <div class='caja3'></div>
-    
+    <div class='caja'>
+        <h1>Titulo de la plataforma</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem nam amet dolorum minus dolores maxime quam
+            quo culpa numquam tempora, Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque similique maiores
+            natus dolorum ea mollitia, nisi ipsam quisquam illum dolorem neque inventore cum ratione unde labore in,
+            amet, aperiam quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, possimus. Blanditiis
+            dolorem necessitatibus cupiditate beatae? Praesentium, tenetur quisquam. Animi similique consectetur id,
+            asperiores esse deserunt molestias praesentium veniam et neque. id exercitationem rerum alias. Repellat illo
+            quos molestiae modi officiis.</p>
+       
+    </div>
+
+    <div class="caja2">
+        <h2>subtitulo de la noticia</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem nam amet dolorum minus dolores maxime quam
+            quo culpa numquam tempora, Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque similique maiores
+            natus dolorum ea mollitia, nisi ipsam quisquam illum dolorem neque inventore cum ratione unde labore in,
+            amet, aperiam quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, possimus. Blanditiis
+            dolorem necessitatibus cupiditate beatae? Praesentium, tenetur quisquam. Animi similique consectetur id,
+            asperiores esse deserunt molestias praesentium veniam et neque. id exercitationem rerum alias. Repellat illo
+        </p>
+    </div>
+
 </body>
+
 </html>
