--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sp">
 
 <head>
     <meta charset="UTF-8">
@@ -7,33 +7,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprendiendo CSS</title>
     <link rel="stylesheet" href="estilos.css">
+    <script src="https://kit.fontawesome.com/376f1db3fa.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
+    <header>
+        <nav class="nav">
+            <ul class="nav__ul">
+                <li class="nav__li"> <i class="fa-solid fa-house-user"></i> <a href="#"> Inicio</a></li>
+                <li class="nav__li"> <i class="fa-solid fa-users"></i> <a href="#"> Sobre nosotros</a></li>
+                <li class="nav__li"> <i class="fa-solid fa-money-check-dollar"></i> <a href="#"> Gana dinero</a></li>
+                <li class="nav__li"> <i class="fa-solid fa-circle-question"></i> <a href="#"> Ayuda</a></li>
+            </ul>
 
-    <div class='caja'>
-        <h1>Titulo de la plataforma</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem nam amet dolorum minus dolores maxime quam
-            quo culpa numquam tempora, Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque similique maiores
-            natus dolorum ea mollitia, nisi ipsam quisquam illum dolorem neque inventore cum ratione unde labore in,
-            amet, aperiam quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, possimus. Blanditiis
-            dolorem necessitatibus cupiditate beatae? Praesentium, tenetur quisquam. Animi similique consectetur id,
-            asperiores esse deserunt molestias praesentium veniam et neque. id exercitationem rerum alias. Repellat illo
-            quos molestiae modi officiis.</p>
-       
-    </div>
+            <ul class="nav__responsive-ul">
+                <div class="nav__responsive-button-container">
+                    <div class="nav__responsive-button fas fa-bars"></div>
+                </div>
+                <div class="nav__li-container">
+                    <li class="nav__responsive-li"> <i class="fa-solid fa-house-user"></i> <a href="#"> Inicio</a></li>
+                    <li class="nav__responsive-li"> <i class="fa-solid fa-users"></i> <a href="#"> Sobre nosotros</a>
+                    </li>
+                    <li class="nav__responsive-li"> <i class="fa-solid fa-money-check-dollar"></i> <a href="#"> Gana
+                            dinero</a></li>
+                    <li class="nav__responsive-li"> <i class="fa-solid fa-circle-question"></i> <a href="#"> Ayuda</a>
+                    </li>
+                </div>
+            </ul>
+        </nav>
+    </header>
 
-    <div class="caja2">
-        <h2>subtitulo de la noticia</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem nam amet dolorum minus dolores maxime quam
-            quo culpa numquam tempora, Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque similique maiores
-            natus dolorum ea mollitia, nisi ipsam quisquam illum dolorem neque inventore cum ratione unde labore in,
-            amet, aperiam quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, possimus. Blanditiis
-            dolorem necessitatibus cupiditate beatae? Praesentium, tenetur quisquam. Animi similique consectetur id,
-            asperiores esse deserunt molestias praesentium veniam et neque. id exercitationem rerum alias. Repellat illo
-        </p>
-    </div>
 
 </body>
 
